src/test/test-models/bad/err-minus-types.stan
transformed data {
  vector[3] y;
  matrix[3,4] z;
  z <- y - z;
}
model {
}
